# poc-corebanking-agent

./: .gitignore  agent_state.py  db.py  history (20.8).txt  main.py  md_document.py  multipleratio.docx  multipleratio2.docx  pyproject.toml  response-history.txt  tool_fetch.py  tools.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  content.baml  gl.baml  guardrails.baml  intent.baml  router.baml  tools.baml
